Makes the InputMethodEngine can be switched per profile when the top-level browser window is switched.

BUG=655435

Review-Url: https://codereview.chromium.org/2597413002
Cr-Commit-Position: refs/heads/master@{#440602}

Former-commit-id: 2e264372929e2a983205b972a06a517ac25a1685