chrome/browser/chromeos/input_method/mock_input_method_engine.cc
@@ -71,6 +71,8 @@ void MockInputMethodEngine::PropertyActivate(const std::string& property_name) {
 
 void MockInputMethodEngine::Reset() {}
 
+void MockInputMethodEngine::MaybeSwitchEngine() {}
+
 bool MockInputMethodEngine::IsInterestedInKeyEvent() const {
   return true;
 }
