ui/base/ime/chromeos/mock_ime_engine_handler.cc
@@ -49,6 +49,9 @@ void MockIMEEngineHandler::Reset() {
   ++reset_call_count_;
 }
 
+void MockIMEEngineHandler::MaybeSwitchEngine() {
+}
+
 bool MockIMEEngineHandler::IsInterestedInKeyEvent() const {
   return true;
 }
